Switch Shortly Express App to mine

--- a/views/partials/backbone_templates.ejs
+++ b/views/partials/backbone_templates.ejs
@@ -5,11 +5,12 @@
     <li><a href='#' class='index'>All Links</a></li>
     <li><a href='#' class='create'>Shorten</a></li>
   </ul>
-    <a href='/logout' class='logout'>Logout</a>
+  <ul id='login'>
+    <li><a href='/logout' class='logout'>Logout</a></li>
+  </ul>
   </div>
   <div id='container'></div>
 </script>
-
 
 <script id='link' type='text/x-handlebars-template'>
   <img src='/redirect_icon.png'/>
@@ -20,7 +21,6 @@
     <a href='{{baseUrl}}/{{code}}'>{{baseUrl}}/{{code}}</a>
   </div>
 </script>
-
 
 <script id='create' type='text/x-handlebars-template'>
   <form>
