--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,4 @@
+<h2>Sign up</h2>
 <form action="/signup" method="post">
     <div>
       <label for="username">Username:</label>
@@ -8,7 +9,7 @@
       <input id="password" type="password" name="password">
     </div>
     <div>
-      <input type="submit" value="Login">
+      <input type="submit" value="Sign up">
     </div>
 </form>
 <p>
